# esp32-riscv-bare-metal-os

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig.default
bootloader/: CMakeLists.txt  bootloader.ld  bootloader_main.c  bootloader_start.S
main/: CMakeLists.txt  main.c  shell.c  shell.h
main/assets/: font5x7.h
main/devices/: ssd1306.c  ssd1306.h
main/drivers/: console.c  console.h  gpio.c  gpio.h  i2c.c  i2c.h
main/startup/: boot.S  linker.ld
rust/: Cargo.toml  README.md  build.rs
rust/.cargo/: config.toml
rust/src/: console.rs  font5x7.rs  gpio.rs  i2c.rs  main.rs  shell.rs  ssd1306.rs
